[gd_scene load_steps=5 format=3 uid="uid://bfgmw6gg4doac"]

[ext_resource type="Theme" uid="uid://my27t5dp6cqn" path="res://assets/default_theme.tres" id="1_gpr5s"]
[ext_resource type="Texture2D" uid="uid://dbrcb5w1mhni4" path="res://textures/tilesets/UI.png" id="2_u86ef"]
[ext_resource type="Script" path="res://scripts/ui/speech_bubble.gd" id="3_ej8al"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6pp20"]
texture = ExtResource("2_u86ef")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
region_rect = Rect2(112, 0, 32, 32)

[node name="SpeechBubble" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gpr5s")
theme_override_styles/panel = SubResource("StyleBoxTexture_6pp20")
script = ExtResource("3_ej8al")

[node name="Label" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("1_gpr5s")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 0
theme_override_font_sizes/font_size = 8
text = "erqwerqwerqwerqwer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true

[node name="VisibleNotifier1" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(0, 0, 20, 20)

[node name="VisibleNotifier2" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(80.5, 0)
rect = Rect2(0, 0, 20, 20)

[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
